Reworked the way asset URIs are handled in the system.
1. In WFS files, the "art" path must be use for art assets. URIs become wla://<module name>/art/<path>.
2. The 'wlj' protocol was eliminated -- the 'wla' protocol is now used for jar files too.
3. Cell setup classes that wish to include an asset uri should use the type AssetURI as the field.
4. The Darkstar server adds a query parameter to AssetURI loaded in from WFS that gives the server
context. The server context gives the base URL of the web server.